deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-app
spec:
  selector:
    matchLabels:
      app: api-app
  replicas: 1
  template:
    metadata:
      labels:
        app: api-app
    spec:
      containers:
        - name: api-app
          image: zhenweiwong/drf-api-practice:latest
          ports:
            - containerPort: 3013
          command:
            - 'gunicorn'
            - 'practice.wsgi'
            - '-b'
            - '0.0.0.0:3013'
