service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-app-service
spec:
  selector:
    app: api-app
  ports:
    - protocol: TCP
    port: 3013
    targetPort: 3013
